[gd_scene load_steps=5 format=3 uid="uid://bcjxs6ha8opch"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_5ynjo"]
[ext_resource type="PackedScene" uid="uid://ba1jh5kg03t1l" path="res://scenes/status_card.tscn" id="4_1o48l"]
[ext_resource type="Script" path="res://scripts/card_deck.gd" id="4_46yqj"]
[ext_resource type="PackedScene" uid="uid://bdl8cf6iei7ss" path="res://scenes/score_card.tscn" id="4_blbev"]

[node name="Player" type="Node2D"]
script = ExtResource("1_5ynjo")

[node name="PlayerDisplayedCardDeck" type="Node2D" parent="."]
script = ExtResource("4_46yqj")

[node name="PlayerCardDeck" type="Node2D" parent="."]
script = ExtResource("4_46yqj")

[node name="PlayerUsedCardDeck" type="Node2D" parent="."]
script = ExtResource("4_46yqj")

[node name="PlayerScoreCard" parent="." instance=ExtResource("4_blbev")]

[node name="PlayerStatusCard" parent="." instance=ExtResource("4_1o48l")]
